Sat, 08 Apr 2006 16:39:08 +0200 <thp@perli.net>
	* Save more details in localDB
	* Show more details in podcast window

Sat, 08 Apr 2006 14:39:28 +0200 <thp@perli.net>
	* "debugging" variable set to True again
	* [ Bug #7016 ] corrupt file length -- fixed
	* Pushed version (we'll now keep 0.7+svn... until 0.8)
	* If debug output is disabled, also don't display wget commandline

Sat, 08 Apr 2006 12:30:59 +0200 <thp@perli.net>
	* ** gPodder version 0.7 is here! **
	* Bumped version number to 0.7
	* Updated documentation files, Manifest, ...
	* Thanks to all the contributors that helped make this release
	  possible, especially thanks to the gpodder-devel list users
	* Now, also set "debugging" variable to False for release

Sat, 08 Apr 2006 09:56:41 +0200 <thp@perli.net>	
	* Added choice to podcast channel config dialog to select if the 
	  user wants to sync to the "Podcasts" playlist or to a specially
	  named playlist on the iPod.
	* Fixed a bug that doesn't save settings of a channel when the 
	  localDB was empty
	* Updated German translation
	* Fixed a bug with localDB channel list display

Sat, 08 Apr 2006 08:44:31 +0200 <thp@perli.net>
	* Applied patch for French translation (thanks Alain Tauch)
	* Updated Makefile to give the user a overview of commands on "make"
	* Updated Makefile to only generate the messages.pot file when 
	  explicitly called with "make messages" - this should put us in 
	  for less useless SVN diffs, as suggested by Alain
	* Modified "doc/dev/i18n.txt" to reflect changes of today
	* Applied patch from Adrien Beaucreux to make the podcastChannel 
	  class act like a Python list and therefore make code more cute
	* Modified "data/po/Makefile" and "Makefile" for modifying the 
	  *.po files only when explicitly requested by the developer

Fri, 07 Apr 2006 22:00:06 +0200 <thp@perli.net>
	* Uhh! Gotta love bureaucracy (bureaucrazy?) -- anyway, got some 
	  more GPL-related copyright notices into the source tree