@@ -1,3 +1,7 @@
+Sun, 09 Apr 2006 14:10:28 +0200 <thp@perli.net>
+	* Enabled podcast flag setting (works with libgpod cvs)
+	* Fixed a brainfart of mine -- new localDB could not be created
+
 Sat, 08 Apr 2006 16:39:08 +0200 <thp@perli.net>
 	* Save more details in localDB
 	* Show more details in podcast window
